# genanki-rs

./: Cargo.toml
src/: package.rs
