[package]
name = "genanki-rs"
version = "0.4.0"
authors = ["Yannick Funk <yannickfunk@yahoo.de>"]
edition = "2018"
description = "Crate to create decks for the open source flashcard platform Anki. Based on Python library genanki"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yannickfunk/genanki-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
tempfile = "3.2.0"
zip = "2.2.0"
serde_json = "1.0.64"
fancy-regex = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
ramhorns = "1.0.1"
thiserror = "2.0.3"

[dev-dependencies]
anyhow = "1.0.62"
pyo3 = "0.22.6"
serial_test = "3.2.0"
uuid = { version = "1.11", features = ["v4"] }
